model training & evaluation added

--- a/Lambda_Churn.ipynb
+++ b/Lambda_Churn.ipynb
@@ -85,11 +85,11 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "c7PYgUqu6qy_",
-        "outputId": "b44b226b-c3a5-4189-e0a5-7cd31643dc85",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "c7PYgUqu6qy_",
+        "outputId": "b44b226b-c3a5-4189-e0a5-7cd31643dc85"
       },
       "execution_count": 4,
       "outputs": [
@@ -5141,11 +5141,11 @@
         "print(y.dtypes)"
       ],
       "metadata": {
-        "id": "yvASCfyn7q-N",
-        "outputId": "659dd269-5243-401c-df52-64d9e7a691c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yvASCfyn7q-N",
+        "outputId": "659dd269-5243-401c-df52-64d9e7a691c6"
       },
       "execution_count": 47,
       "outputs": [
@@ -5505,11 +5505,11 @@
         "print(f\"  - Shuffle enabled for better randomization\")"
       ],
       "metadata": {
-        "id": "z7mZPpkV2wX_",
-        "outputId": "5f7502d8-fedd-449c-f0eb-7621075a48c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "z7mZPpkV2wX_",
+        "outputId": "5f7502d8-fedd-449c-f0eb-7621075a48c6"
       },
       "execution_count": 56,
       "outputs": [
@@ -5560,11 +5560,11 @@
         "    print(f\"  ✓ {name}\")"
       ],
       "metadata": {
-        "id": "fr45u6Sd2woh",
-        "outputId": "24a8932c-87e2-4622-97d6-dd315b4fd2da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fr45u6Sd2woh",
+        "outputId": "24a8932c-87e2-4622-97d6-dd315b4fd2da"
       },
       "execution_count": 57,
       "outputs": [
@@ -5610,11 +5610,11 @@
         ""
       ],
       "metadata": {
-        "id": "TgPTCSRa4hcG",
-        "outputId": "a9979af2-9db0-4ed9-c36b-f88bb6b5b27c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TgPTCSRa4hcG",
+        "outputId": "a9979af2-9db0-4ed9-c36b-f88bb6b5b27c"
       },
       "execution_count": 58,
       "outputs": [
@@ -5651,10 +5651,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# ===============================================================\n",
-        "# STEP 5: TRAINING THE MODEL ON TRAINING FOLD DATA SET & EVALUATE\n",
-        "#          ON VALIDATION SET\n",
-        "# ==============================================================="
+        "# =============================================================================\n",
+        "# STEP 5:TRAINING THE MODEL ON TRAIN FOLD DATA SET &\n",
+        "# EVALUATE ON VALIDATION SET\n",
+        "# ============================================================================="
       ],
       "metadata": {
         "id": "jddnjJqY6IBd"
@@ -5753,11 +5753,11 @@
         "    print('\\n' + '='*80)"
       ],
       "metadata": {
-        "id": "BLvcsZQp2wzE",
-        "outputId": "473fbf35-ce84-46db-dc43-cc1e05837958",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BLvcsZQp2wzE",
+        "outputId": "473fbf35-ce84-46db-dc43-cc1e05837958"
       },
       "execution_count": 59,
       "outputs": [
@@ -6030,12 +6030,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "mX8lZzLA2w-X",
-        "outputId": "8360e29b-2b78-405d-eb78-66e5a3a55e4b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "mX8lZzLA2w-X",
+        "outputId": "8360e29b-2b78-405d-eb78-66e5a3a55e4b"
       },
       "execution_count": 60,
       "outputs": [
@@ -6112,11 +6112,11 @@
         "    print(f\"   Validation Fold F1-Score: {best_val_f1:.4f}\")\n"
       ],
       "metadata": {
-        "id": "A0LJh7s5Apne",
-        "outputId": "f4ab7275-2556-4fd6-98b3-458457c2432f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "A0LJh7s5Apne",
+        "outputId": "f4ab7275-2556-4fd6-98b3-458457c2432f"
       },
       "execution_count": 61,
       "outputs": [
@@ -6168,11 +6168,11 @@
         "print(f\"False Negatives (Missed churners): {fn}\")\n"
       ],
       "metadata": {
-        "id": "F3kj363Y2xGO",
-        "outputId": "a7de6774-a68b-4989-8be7-52e107eaaaa3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "F3kj363Y2xGO",
+        "outputId": "a7de6774-a68b-4989-8be7-52e107eaaaa3"
       },
       "execution_count": 62,
       "outputs": [
